major: move to own project