@@ -1,7 +1,6 @@
 plugins {
     java
-    id("org.springframework.boot") version "3.2.5"
-    id("io.spring.dependency-management") version "1.1.5"
+
 }
 
 java {
@@ -19,19 +18,8 @@ repositories {
 }
 
 dependencies {
-    implementation("org.springframework.boot:spring-boot-starter")
-    implementation("com.google.auto.service:auto-service:1.1.1")
-    compileOnly("org.projectlombok:lombok")
-    annotationProcessor("org.projectlombok:lombok")
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
-tasks.withType<JavaCompile> {
-//    options.compilerArgs.add("--enable-preview")
-    options.compilerArgs.add("-XprintProcessorInfo")
-    //options.compilerArgs.add("-XprintRounds")
-}
 
 tasks.withType<Test> {
     useJUnitPlatform()
